Correction de la connexion jbdc

--- a/Personnel/demo.properties
+++ b/Personnel/demo.properties
@@ -1,5 +1,5 @@
 user=root
 password=
 dburl=jdbc:mysql://localhost:3308/personnel?serverTimezone=UTC
-
+driverClassName = com.mysql.cj.jdbc.Driver
 
